cases estilos pulidos

--- a/cases.html
+++ b/cases.html
@@ -49,7 +49,7 @@
                 <h3>Ivascular</h3>
                 <article>Empresa líder en dispositivos médicos e innovación de origen europeo, con foco en la creación de soluciones terapéuticas de enfermedades Cardiovasculares y Neurovasculares.</article>
                 <div class="more" >
-                    <a href="ivascular.html">Read more</a>
+                    <a href="ivascular.html">Leer más</a>
                     <svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M22.9468 0L21.9385 1.002L30.2001 9.21271H0V10.6327H30.3326L21.9213 18.998L22.9295 20L33 9.99141L22.9468 0Z" fill="#4538DA"/>
                     </svg>                    
@@ -61,7 +61,7 @@
                 <h3>Century 21</h3>
                 <article>WWC contribuye con C21 al desarrollo de proyectos y soluciones inmobiliarias innovadoras, integrales y ajustadas a las necesidades de sus clientes.</article>
                 <div class="more">
-                    <a href="century.html">Read more</a>
+                    <a href="century.html">Leer más</a>
                     <svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M22.9468 0L21.9385 1.002L30.2001 9.21271H0V10.6327H30.3326L21.9213 18.998L22.9295 20L33 9.99141L22.9468 0Z" fill="#4538DA"/>
                     </svg>  
@@ -95,7 +95,10 @@
                 <h3>Salud Prevent</h3>
                 <article>Contribuye a reducir complicaciones cardiológicas graves en pacientes de riesgo, a través de la educación y mejora de sus hábitos y conductas, actuando en la prevención. De igual manera brinda acceso a procedimientos de alta complejidad, creando alternativas de cobertura en instituciones de primer nivel como el ICBA.</article>
                 <div class="more" >
-                    <a href="saludPrevent.html">Read more</a>
+                    <a href="saludPrevent.html">Leer más</a>
+                    <div>
+                        
+                    </div>
                     <svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M22.9468 0L21.9385 1.002L30.2001 9.21271H0V10.6327H30.3326L21.9213 18.998L22.9295 20L33 9.99141L22.9468 0Z" fill="#4538DA"/>
                     </svg>  
