landing cases y ajustes a home

--- a/cases.html
+++ b/cases.html
@@ -32,6 +32,52 @@
 
     <section class="home_0"></section>
 
+    <div class="containerFlow">
+        <h1>
+            Nos especializamos en tres pilares,<br>
+            claves para el desarrollo del ser humano
+        </h1>
+        <div class="container_btn">
+          <div class="readme">
+            <div class="img">
+              <img src="img/caseFlow1.png" alt="" />
+              <h4>Salud</h4>
+              <p>
+                Crear soluciones integrales<br>
+                con foco en la prevención y en el<br>
+                acceso de los pacientes<br>
+                a tratamientos de alta complejidad 
+              </p>
+            </div>
+          </div>
+          <div class="readme">
+            <div class="img">
+              <img src="img/caseFlow2.png" alt="" />
+              <h4>Vivienda</h4>
+              <p>
+                Desarrollo de red de asesores<br>
+                y proyectos inmobiliarios,<br>
+                que faciliten satisfacer las necesidades<br>
+                habitacionales de nuestros clientes
+              </p>
+            </div>
+          </div>
+          <div class="readme">
+            <div class="img">
+              <img src="img/caseFlow3.png" alt="" />
+              <h4>Educación</h4>
+              <p>
+                Utilizar la tecnología digital y de<br>
+                comunicación actual, para el<br> 
+                desarrollo de herramientas que<br> 
+                permitan educar a poblaciones con<br> 
+                el objetivo de mejorar su salud
+              </p>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <section class="container" >
         <div class="case">
             <div class="caseImg">
