--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/style.css">
     <title>Home</title>
