responsive home y footer

--- a/index.html
+++ b/index.html
@@ -39,10 +39,18 @@
       </footer>
       <div class="container">
         <h1 class="title" id="title">
-          <span>La forma</span> <br />
-          <span>más rápida </span><br />
-          <span>de alcanzar</span> <br />
-          <span>el éxito.</span>
+          <div class="default">
+            <span>La forma</span> <br />
+            <span>más rápida </span><br />
+            <span>de alcanzar</span> <br />
+            <span>el éxito.</span>
+          </div>
+          <div class="responsive">
+            <span>La forma</span>
+            <span>más rápida </span>
+            <span>de alcanzar</span>
+            <span>el éxito.</span>
+          </div>
         </h1>
       </div>
       <div class="imagen">
