responsive mission y title

--- a/mission.html
+++ b/mission.html
@@ -4,8 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
-    <link rel="stylesheet" href="style/mission.css">
+    <link rel="stylesheet" href="style/title.css">
     <link rel="stylesheet" href="style/fonts.css">
+    <link rel="stylesheet" href="style/mission.css">
     <title>Mission</title>
 </head>
 <body>
@@ -28,11 +29,11 @@
 
     <section class="home_0"></section>
 
-    <section class="mission_1"></section>
+    <section class="approach_1" id="mission_1"></section>
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['title'];
-        var text = "Facilitar la Transformación profunda en las organizaciones,<br> desarrollando capacidades para  alcanzar resultados sustentables de crecimiento,<br> funcionando como sus catalizadores del cambio adaptativo y creando un nuevo futuro."
+        var text = "Facilitar la Transformación profunda en las organizaciones, desarrollando capacidades para  alcanzar resultados sustentables de crecimiento, funcionando como sus catalizadores del cambio adaptativo y creando un nuevo futuro."
         var firstLine = "Nuestra"
         var secondLine = "Misión"
 
