responsive landing cases

--- a/cases.html
+++ b/cases.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-        <div class="case">
+        <div class="case caseReverse">
             <div class="caseText" >
                 <h3>Century 21</h3>
                 <article>WWC contribuye con C21 al desarrollo de proyectos y soluciones inmobiliarias innovadoras, integrales y ajustadas a las necesidades de sus clientes.</article>
