menu responsive y landing proyeco responsive

--- a/cases.html
+++ b/cases.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/mission.css">
+    <link rel="stylesheet" href="style/responsiveNav.css">
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/cases.css">
 
@@ -14,6 +15,7 @@
 </head>
 <body>
     <header id="nav"></header>
+    <div id="navResp" class="navResp"></div>
 
     <script
       type="text/javascript"
@@ -23,11 +25,19 @@
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/titleCase.js"></script>
     <script type="text/javascript" src="js/footer.js"></script>
+    <script type="text/javascript" src="js/responsiveNav.js"></script>
+
 
     <script type="text/javascript">
       var navTemplate = Handlebars.templates["nav"];
 
       document.getElementById("nav").innerHTML += navTemplate();
+    </script>
+
+    <script type="text/javascript">
+        var navTemplate = Handlebars.templates["responsiveNav"];
+
+        document.getElementById("navResp").innerHTML += navTemplate();
     </script>
 
     <section class="home_0"></section>
@@ -160,5 +170,7 @@
 
       document.getElementById("form").innerHTML += footerTemplate();
     </script>
+
+    <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
 </body>
 </html>
