--- a/enfoque.html
+++ b/enfoque.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="style/fonts.css" />
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/responsiveNav.css">
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"
     ></script>
     <title>Enfoque</title>
   </head>
+
   <body>
     <header id="nav"></header>
+    <div id="navResp" class="navResp"></div>
+
     <section class="home_0"></section>
 
     <script
@@ -24,6 +28,7 @@
 
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/footer.js"></script>
+    <script type="text/javascript" src="js/responsiveNav.js"></script>
     <script type="text/javascript" src="js/paso.js"></script>
 
     <script type="text/javascript">
@@ -31,6 +36,13 @@
 
       document.getElementById("nav").innerHTML += navTemplate();
     </script>
+
+    <script type="text/javascript">
+      var navTemplate = Handlebars.templates["responsiveNav"];
+
+      document.getElementById("navResp").innerHTML += navTemplate();
+    </script>
+
     <div id="paso"></div>
     <script type="text/javascript">
       var navTemplate = Handlebars.templates["paso"];
@@ -57,5 +69,7 @@
 
       document.getElementById("form").innerHTML += footerTemplate();
     </script>
+    
+    <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
   </body>
 </html>
