--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsiveNav.css">
     <title>Home</title>
   </head>
   <body>
-    <header id="nav"></header>
+    <header id="nav" class="defNav"></header>
+    <div id="navResp" class="navResp"></div>
 
     <script
       type="text/javascript"
@@ -18,11 +20,18 @@
 
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/footer.js"></script>
+    <script type="text/javascript" src="js/responsiveNav.js"></script>
 
     <script type="text/javascript">
       var navTemplate = Handlebars.templates["nav"];
 
       document.getElementById("nav").innerHTML += navTemplate();
+    </script>
+
+    <script type="text/javascript">
+      var navTemplate = Handlebars.templates["responsiveNav"];
+
+      document.getElementById("navResp").innerHTML += navTemplate();
     </script>
 
     <section class="home_0"></section>
@@ -120,5 +129,7 @@
 
       document.getElementById("form").innerHTML += footerTemplate();
     </script>
+
+    <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
   </body>
 </html>
