--- a/approach.html
+++ b/approach.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/enfoque.css">
+    <link rel="stylesheet" href="style/responsiveNav.css">
+
     <title>Approach</title>
 </head>
 <body>
 
+    <div id="navResp" class="navResp"></div>
     <header id="nav"></header>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
 
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/title.js"></script>
+    <script type="text/javascript" src="js/responsiveNav.js"></script>
     <script type="text/javascript" src="js/footer.js"></script>
     <script type="text/javascript" src="js/paso.js"></script>
 
@@ -24,6 +28,13 @@
         var navTemplate = Handlebars.templates['nav'];
 
         document.getElementById('nav').innerHTML += navTemplate()
+    </script>
+
+
+    <script type="text/javascript">
+        var navTemplate = Handlebars.templates["responsiveNav"];
+
+        document.getElementById("navResp").innerHTML += navTemplate();
     </script>
 
     <div class="home_0"></div>
@@ -111,5 +122,7 @@
 
         document.getElementById('form').innerHTML += footerTemplate()
     </script>
+    
+    <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
     </body>
 </html>
