--- a/ivascular.html
+++ b/ivascular.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/case.css">
+    <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/titleCase.css">
+    <link rel="stylesheet" href="style/responsiveNav.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,14 +17,22 @@
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/footer.js"></script>
     <script type="text/javascript" src="js/case.js"></script>
+    <script type="text/javascript" src="js/responsiveNav.js"></script>
     <script type="text/javascript" src="js/titleCase.js"></script>
 
+    <div id="navResp" class="navResp"></div>
     <header id="nav"></header>
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['nav'];
 
         document.getElementById('nav').innerHTML += navTemplate()
+    </script>
+
+    <script type="text/javascript">
+        var navTemplate = Handlebars.templates["responsiveNav"];
+
+        document.getElementById("navResp").innerHTML += navTemplate();
     </script>
 
     <div id="title"></div>
@@ -70,5 +80,7 @@
 
         document.getElementById('form').innerHTML += footerTemplate()
     </script>
+
+    <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
 </body>
 </html>
