--- a/mission.html
+++ b/mission.html
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/title.css">
+    <link rel="stylesheet" href="style/responsiveNav.css">
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/mission.css">
     <title>Mission</title>
 </head>
 <body>
     <header id="nav"></header>
+    <div id="navResp" class="navResp"></div>
 
     <script
       type="text/javascript"
@@ -20,11 +22,18 @@
     <script type="text/javascript" src="js/title.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/footer.js"></script>
+    <script type="text/javascript" src="js/responsiveNav.js"></script>
 
     <script type="text/javascript">
       var navTemplate = Handlebars.templates["nav"];
 
       document.getElementById("nav").innerHTML += navTemplate();
+    </script>
+
+    <script type="text/javascript">
+        var navTemplate = Handlebars.templates["responsiveNav"];
+
+        document.getElementById("navResp").innerHTML += navTemplate();
     </script>
 
     <section class="home_0"></section>
@@ -88,5 +97,7 @@
 
       document.getElementById("form").innerHTML += footerTemplate();
     </script>
+
+    <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
 </body>
 </html>
